# ship

./: .gitignore  Cargo.toml  README.md
assets/images/: .gitignore  s.aseprite  ship.aseprite
config/: config.toml
crates/internationalization/: Cargo.toml
crates/internationalization/src/: dictionary.rs  error.rs  language.rs  lib.rs
crates/ship/: Cargo.toml  build.rs  manifest.rc
crates/ship-gui/: Cargo.toml
crates/ship-gui/src/: lib.rs
crates/ship-gui/src/gui/: mod.rs  update.rs
crates/ship-gui/src/gui/view/: about.rs  home.rs  mod.rs  navbar.rs  settings.rs
crates/ship-gui/src/gui/view/app/: mod.rs  template_a.rs
crates/ship-gui/src/gui/view/version/: mod.rs
crates/ship-gui/src/theme/: mod.rs
crates/ship-gui/src/view/: home.rs  mod.rs
crates/ship-internal/: Cargo.toml
crates/ship-internal/src/: lib.rs
crates/ship-internal/src/app/: mod.rs  settings.rs
crates/ship-internal/src/application/: common.rs  mod.rs  settings.rs
crates/ship-internal/src/application/app/: app_manage.rs  app_server.rs  mod.rs
crates/ship-internal/src/application/app/app_server/: launch.rs
crates/ship-internal/src/application/scan/: mod.rs
crates/ship-internal/src/application/update/: mod.rs  sync.rs  update.rs  update_manage.rs
crates/ship-internal/src/cache/: mod.rs
crates/ship-internal/src/config/: error.rs  mod.rs
crates/ship-internal/src/log/: mod.rs
crates/ship-internal/src/request/: check_update.rs  error.rs  get_app_servers.rs  get_apps.rs  mod.rs
crates/ship-internal/src/request/app_server/: announcement.rs  app_server_info.rs  banner.rs  file_info.rs  get_app_server.rs  get_file_info.rs  mod.rs
crates/ship-internal/src/types/: banner.rs  common.rs  launch.rs  mod.rs
crates/ship-internal/src/version/: mod.rs  update.rs  version_manage.rs
crates/ship/src/: main.rs
crates/ship/src/app/: mod.rs
crates/util/: Cargo.toml
crates/util/src/: lib.rs
crates/util/src/convert/: file_size.rs
crates/util/src/filepath/: mod.rs
crates/util/src/fs/: symlink.rs
crates/util/src/hash/: md5.rs
crates/util/src/time/: mod.rs
locales/: en_US.yml  ja_JP.yml  zh_CN.yml
src/: app.rs  cache.rs  config.rs  data.rs  downloader.rs  error.rs  gui.rs  info.rs  main.rs  scan.rs  update.rs  util.rs
src/app/: app_manage.rs  launch.rs  mod.rs
src/app/launch/: start.rs
src/cache/: mod.rs
src/config/: mod.rs
src/data/: apps.rs  common.rs  core.rs  i18n.rs  mod.rs  page.rs  settings.rs
src/error/: mod.rs
src/gui/: menubar.rs  mod.rs  view.rs
src/gui/view/: debug.rs  gserver.rs  help.rs  home.rs  menubar.rs  mod.rs  navbar.rs  settings.rs
src/gui/view/apps/: mod.rs  template_a.rs  template_b.rs
src/gui/view/page/: gserver.rs  mod.rs
src/i18n/: mod.rs
src/log/: mod.rs
src/requests/: get_app_servers.rs  get_apps.rs  get_file_info.rs  get_info.rs  mod.rs
src/scan/: mod.rs
src/sync/: mod.rs
src/utils/: mod.rs
src/utils/fs/: mod.rs  symlink.rs
src/utils/hash/: md5.rs
