[package]
name = "ship-gui"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.9.0", features = ["image"] }
iced_aw = { version = "0.5.0", default-features = false, features = ["modal", "card"] }
