[package]
name = "ship-internal"
version = "0.1.0"
authors = ["Michael Chi <chicong@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
internationalization = { path = "../internationalization" }
util = { path = "../util" }
config = "0.13.3"
log = "0.4.17"
env_logger = "0.10.0"
serde = { version="1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_repr = "0.1.12"
chrono = "0.4.24"
walkdir = "2.3.3"
reqwest = { version = "0.11.15", features = ["blocking", "json"] }
lazy_static = "1.4.0"