[package]
name = "ship"
version = "0.1.0"
authors = ["Michael Chi <chicong@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ship-internal = { path = "../ship-internal" }
ship-gui = { path = "../ship-gui" }

[build-dependencies]
embed-resource = "2.1.1"
